tests/baselines/reference/extendGenericArray2.errors.txt
tests/cases/compiler/extendGenericArray2.ts(8,5): error TS2322: Type '文字' is not assignable to type '数字'.


==== tests/cases/compiler/extendGenericArray2.ts (1 errors) ====
    interface IFoo<T> {
        x: T;
    }
    
    interface Array<T> extends IFoo<T> { }
    
    var arr: string[] = [];
    var y: number = arr.x;
        ~
!!! error TS2322: Type '文字' is not assignable to type '数字'.